# snapwright

./: CLAUDE.md  LICENSE  Makefile  README.md
snapwright-repo/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  pyproject.toml  repository_structure.md  setup.py
snapwright-repo/.github/workflows/: ci.yml  release.yml
snapwright-repo/examples/: advanced_usage.py  basic_usage.py  data_extraction.py
snapwright-repo/src/snapwright/: cache.py  cli.py
src/snapwright/: __init__.py  browser_manager.py  config.py  core.py  exceptions.py
tests/: test_core.py
